changed caching system
